force-app/main/default/objects/Switches__c/Switches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>custom setting para activar los diferentes procesos</description>
    <label>Switches</label>
</CustomObject>