force-app/main/default/objects/Switches__c/fields/Recordatorio_Ofertas__c.field-meta.xml
<CustomField>
    <fullName>Recordatorio_Ofertas__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Envio diario del recordatorio de solicitud de propuesta de oferta a los proveedores una vez que se ha cerrado la fecha de licitación</description>
    <label>B - Comercial - Recordatorio ofertas</label>
    <type>Checkbox</type>
</CustomField>