force-app/main/default/objects/Switches__c/fields/Reglas_Validacion__c.field-meta.xml
<CustomField>
    <fullName>Reglas_Validacion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Aplicar las reglas de validación del objeto de Cuenta</description>
    <label>V - Cuenta - Reglas Validación</label>
    <type>Checkbox</type>
</CustomField>