force-app/main/default/objects/Switches__c/fields/Sync_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Sync_Cliente__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sincronización de Clientes a través de trigger con las modificaciones del cliente</description>
    <label>T - Cuenta - Sync Cliente</label>
    <type>Checkbox</type>
</CustomField>